--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/Assets/Images/myprofilepic.jpg" />
+    <link rel="icon" type="image/svg+xml" href="Images/myprofilepic.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaurang Patel</title>
   </head>
